# ail

./: Cargo.toml  README.md
Formula/: ail.rb
config/: default.toml
src/: cli.rs  config.rs  main.rs
src/adapters/: claude_code.rs  codex.rs  cursor.rs  mod.rs  traits.rs
src/core/: context.rs  db.rs  indexer.rs  mod.rs  report.rs  search.rs  summarize.rs
src/mcp/: server.rs
src/tui/: app.rs  mod.rs  theme.rs
