[package]
name = "ail"
version = "0.3.0"
edition = "2021"
description = "AI Log — Session management, history search, context sharing, and work reports for AI coding agents"
license = "MIT"
repository = "https://github.com/sungeun/ail"
keywords = ["ai", "cli", "tui", "session", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
dirs = "5"
arboard = "3"
regex = "1"
unicode-width = "0.2"
fuzzy-matcher = "0.3"

# HTTP (for LLM summarization)
ureq = { version = "2", features = ["json"] }

# Async (for MCP server)
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
strip = true
